add last admin user endpoints
